<resources>
    <string name="app_name">Rapid Solution Team</string>
    <string name="login">Login</string>
    <string name="uk_qrt">RST</string>
    <string name="picture_of_chief_minister">Picture of chief minister</string>
    <string name="slogan">Rapid Solution Team</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="or">or</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="temples">Temples</string>
    <string name="gov_updates">Gov. Updates</string>
    <string name="ai_chatbot">AI Chatbot</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="char_dham_yatra">Char Dham Yatra</string>
    <string name="registration_links">Registration Links</string>
    <string name="articles_for_yatra">articles for yatra</string>
    <string name="gallery">Gallery</string>
    <string name="meri_yojna">meri yojna</string>
    <string name="disaster_management">Disaster Management</string>
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="emergency">Emergency</string>
    <string name="citizen_services">Citizen Services</string>
    <string name="complaint_registration">Complaint\nRegistration</string>
    <string name="complaint_to_nodal_officer">Complaint To\nNodal Officer</string>
    <string name="cart_rate_list">Cart Rate List</string>
    <string name="usdma">usdma</string>
    <string name="other_services">Other Services</string>
    <string name="gmvn_rates">Gmvn Rates</string>
    <string name="helicopter_rate">Helicopter Rate</string>
    <string name="gamvn_rates">Gamvn Rates</string>
    <string name="taxi_rates">Taxi Rates</string>
    <string name="ev_charging_station">EV Charging\nStation</string>
    <string name="sankalp">Sankalp</string>
    <string name="quick_social_media_links">Quick Social Media Links</string>
    <string name="facebook_link">Facebook Link\n</string>
    <string name="twitter_link">twitter link</string>
    <string name="instagram_link">instagram_link</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="pic_of_dham">Pic of dham</string>
    <string name="cm_profile_verified_link">CM Profile Verified Link</string>
    <string name="chardham_gpt">CharDham GPT</string>
    <string name="ask_me_anything">Ask Me Anything</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="open_chatbot">open chatbot</string>
    <string name="ukcm">UKCM</string>
    <string name="district_team">District\'s Team</string>
    <string name="new_complaint">New Complaint</string>
    <string name="subject">Complaint Title</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="complaint_level">Complaint Level</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="location">Location</string>
    <string name="attach_file">Attach Files</string>
    <string name="submit">Submit</string>
    <string name="describe_reason">Describe Reason for unsolved complaint</string>
    <string name="district_name">District Name</string>
    <string name="districts">Districts</string>
    <string name="social_media">Social Media</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="file_name">File Name</string>
    <string name="upload_files">Upload Files</string>
    <string name="supported_formats_pdf_doc_docx_jpg_png">Supported formats: PDF, DOC, DOCX, JPG, PNG</string>
    <string name="create_your_account">Fill all details to create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Back to Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="police_number">100</string>
    <string name="ambulance_number">108</string>
    <string name="emergency_number">112</string>
    <string name="articles">Articles</string>
    <string name="pauri">Pauri</string>
    <string name="district_n_administration">Administration</string>
    <string name="back">back</string>
    <string name="solution_team">Solution Team</string>
    <string name="click_to_upload">Click to upload</string>
    <string name="remember_me">Remember me</string>
    <string name="admin_id">Admin ID</string>
    <string name="notification">Notification</string>
    <string name="my_complaints">My Complaints</string>
</resources>