<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".view.admin.activities.AdminLogInActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        android:padding="@dimen/_16sdp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_text"
        android:text="@string/login"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/app_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admin_id"
        android:hint="@string/admin_id"
        android:background="@drawable/edit_box_backgournd"
        android:padding="@dimen/_16sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/login_text"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_box_backgournd"
        android:padding="@dimen/_16sdp"
        android:inputType="textPassword"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/admin_id"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_50sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/login"
        android:textSize="@dimen/_20ssp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:background="@drawable/rounded_bottom"
        app:layout_constraintTop_toBottomOf="@id/adminPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>