<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorPrimary" />

        <!-- Top Section -->
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_4sdp"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_4sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/articles_for_yatra"
                    android:scaleType="centerCrop"
                    android:src="@drawable/yatra_articles" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_4sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/gallery"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gallery" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_4sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/meri_yojna"
                    android:scaleType="centerCrop"
                    android:src="@drawable/meri_yojna" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/solutionteam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/districts"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/district_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/solutionteam" />

        <!-- Emergency Numbers Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emergency_card"
            app:cardCornerRadius="@dimen/_8sdp"
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/district_recycler_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/emergency_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/emergency_numbers"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/police_ll"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@id/emergency_text"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_48sdp"
                        android:layout_height="@dimen/_48sdp"
                        android:contentDescription="@string/police"
                        android:src="@drawable/ic_police" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/police"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emergency_ll"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@id/emergency_text"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_48sdp"
                        android:layout_height="@dimen/_48sdp"
                        android:contentDescription="@string/emergency"
                        android:src="@drawable/ic_emergency" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/emergency"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ambulance_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@id/emergency_text"
                    app:layout_constraintEnd_toStartOf="@id/emergency_ll"
                    app:layout_constraintStart_toEndOf="@id/police_ll">

                    <ImageView
                        android:layout_width="@dimen/_48sdp"
                        android:layout_height="@dimen/_48sdp"
                        android:contentDescription="@string/ambulance"
                        android:src="@drawable/ic_ambulance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/ambulance"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/social_card"
            app:cardCornerRadius="@dimen/_8sdp"
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/emergency_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/social_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/social_media"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/social_text">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="1"
                        android:contentDescription="@string/facebook_link"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="1"
                        android:contentDescription="@string/twitter_link"
                        android:src="@drawable/twitter" />

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="1"
                        android:contentDescription="@string/instagram_link"
                        android:src="@drawable/instagram" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>