<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.fragment.AiChatbotFragment">

    <ImageView
        android:id="@+id/qna_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:contentDescription="@string/chardham_gpt"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_qna"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qna_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/coming_soon"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@+id/qna_image"
        app:layout_constraintStart_toStartOf="@+id/qna_image"
        app:layout_constraintTop_toBottomOf="@+id/qna_image" />

    <!-- RecyclerView for displaying messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/message_input_layout"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:padding="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@id/message_input_layout"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:listitem="@layout/message_layout" />

    <!-- Input area -->
    <LinearLayout
        android:id="@+id/message_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/message_background"
            android:hint="@string/type_your_message"
            android:inputType="textMultiLine"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/rounded_bottom"
            android:contentDescription="@string/send"
            android:src="@drawable/ic_send" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>